@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.017000 at Tue Aug 12 23:48:22 2014
+; vim: syntax=dosini
 name             = App-cpanoutdated-fresh
 main_module      = bin/cpan-outdated-fresh
 author           = Kent Fredric <kentnl@cpan.org>
