@@ -1,6 +1,11 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001006
+ [Added / configure requires]
+ - perl 5.008
+
+ [Added / test requires]
+ - perl 5.008
 
 0.001005 2014-09-19T07:03:13Z
 
@@ -18,4 +23,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  - Test::More 0.89 → 0.96
 
 0.001001 2014-08-30T00:39:10Z
-
