@@ -1,6 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001006
+ [Added / runtime recommends]
+ - Moo 1.000008
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001006 → 0.99
 
 0.001005 2014-09-19T07:03:13Z
 
@@ -13,4 +22,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.001002 2014-08-30T10:32:13Z
 
 0.001001 2014-08-30T00:39:10Z
-
