@@ -1,6 +1,14 @@
 Release history for App-cpanoutdated-fresh
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001005, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +14 ↑4 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +1)
+ - test: +1 (recommends: ↑1 ↓1)
 
 0.001005 2014-09-19T07:03:13Z
  [Bugfix]
@@ -43,4 +51,3 @@ Release history for App-cpanoutdated-fresh
 
 0.001000 2014-08-13T01:49:59Z
  - First version.
-
